# MedleyPlusPlus

./: .gitignore  README.md  RUNNING.md  SETUP.md
backend/: CMakeLists.txt  app_new
backend/include/: ContentBased.h  DataLoader.h  Hybrid.h  InteractionStore.h  Recommendation.h  Recommender.h  Track.h  User.h  UserBased.h  UserProfiler.h
backend/src/: ContentBased.cpp  DataLoader.cpp  Hybrid.cpp  InteractionStore.cpp  UserBased.cpp  UserProfiler.cpp  main.cpp
frontend/: next.config.mjs
frontend/components/: swipe-card.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css
